--- a/package.json
+++ b/package.json
@@ -8,19 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "lucide-react": "^0.284.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
     "next": "^13.4.0",
+    "prisma": "^6.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.7.0",
-    "lucide-react": "^0.284.0",
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
-} 
+}
